Query Browser: Fix graph padding so that labels fit in the border
Reduce padding between the axis labels and the graph to save some space
and prevent the labels from sometimes overflowing outside the border.

Also tweak some styles to make better use of the space available and to
better match the mocks.

--- a/frontend/public/components/monitoring/_monitoring.scss
+++ b/frontend/public/components/monitoring/_monitoring.scss
@@ -1,5 +1,6 @@
 .graph-wrapper--query-browser {
   padding-left: 40px;
+  padding-right: 10px;
 }
 
 .query-browser__clear-icon {
